--- a/public/mobile.html
+++ b/public/mobile.html
@@ -118,7 +118,7 @@
                 <div class="space-y-6">
                     <h1 class="text-5xl sm:text-6xl font-extrabold text-white tracking-tight leading-tight" style="text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
                         Give Your Child the
-                        <span class="font-serif italic bg-gradient-to-r from-purple-600 via-purple-500 to-pink-500 bg-clip-text text-transparent pr-2" style="-webkit-text-stroke: 1.5px #1e1b4b; text-shadow: 0 0 15px rgba(147, 51, 234, 0.8), 0 0 30px rgba(236, 72, 153, 0.6), 3px 3px 6px rgba(0,0,0,0.7);">
+                        <span class="font-serif italic bg-gradient-to-r from-amber-300 via-yellow-300 to-amber-400 bg-clip-text text-transparent pr-2">
                             Advantage
                         </span>
                     </h1>
@@ -163,7 +163,7 @@
                 <!-- Section Header -->
                 <div class="text-center mb-12 fade-in-left" data-scroll>
                     <h2 class="text-4xl font-extrabold text-white tracking-tight mb-6" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.4);">
-                        What Your Child Will <span class="font-serif italic bg-gradient-to-r from-teal-600 via-cyan-500 to-blue-500 bg-clip-text text-transparent pr-2" style="-webkit-text-stroke: 1.5px #0f172a; text-shadow: 0 0 12px rgba(20, 184, 166, 0.9), 0 0 25px rgba(59, 130, 246, 0.7), 2px 2px 5px rgba(0,0,0,0.8);">Learn</span>
+                        What Your Child Will <span class="font-serif italic bg-gradient-to-r from-amber-300 via-yellow-300 to-amber-400 bg-clip-text text-transparent pr-2">Learn</span>
                     </h2>
                     <p class="text-lg text-white/90 leading-relaxed" style="text-shadow: 0 1px 3px rgba(0,0,0,0.2);">
                         From AI fundamentals to real-world applications, every session builds essential skills for tomorrow's digital world.
@@ -288,7 +288,7 @@
                 <!-- Section Header -->
                 <div class="text-center mb-12 fade-in-left delay-4" data-scroll>
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white tracking-tight mb-6" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.4);">
-                        What Your Child Could <span class="font-serif italic bg-gradient-to-r from-blue-700 via-indigo-600 to-purple-600 bg-clip-text text-transparent pr-2" style="-webkit-text-stroke: 1.5px #0f172a; text-shadow: 0 0 18px rgba(79, 70, 229, 0.9), 0 0 35px rgba(147, 51, 234, 0.7), 4px 4px 8px rgba(0,0,0,0.8);">Create</span>
+                        What Your Child Could <span class="font-serif italic bg-gradient-to-r from-amber-300 via-yellow-300 to-amber-400 bg-clip-text text-transparent pr-2">Create</span>
                     </h2>
                     <p class="text-lg text-white/90 leading-relaxed max-w-2xl mx-auto">
                         From homework help to potential startups — see what's possible in just 12 weeks
@@ -463,7 +463,7 @@
                 <div class="space-y-6">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white tracking-tight leading-tight" style="text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
                         Ready to Give Your Child the
-                        <span class="font-serif italic bg-gradient-to-r from-purple-600 via-purple-500 to-pink-500 bg-clip-text text-transparent px-2 inline-block" style="-webkit-text-stroke: 1.5px #1e1b4b; animation: glow-pulse 3s ease-in-out infinite;">
+                        <span class="font-serif italic bg-gradient-to-r from-amber-300 via-yellow-300 to-amber-400 bg-clip-text text-transparent px-2 inline-block">
                             AI Advantage?
                         </span>
                     </h2>
@@ -800,15 +800,6 @@
             }
             100% {
                 background-position: 0% 50%;
-            }
-        }
-
-        @keyframes glow-pulse {
-            0%, 100% {
-                text-shadow: 0 0 15px rgba(147, 51, 234, 0.8), 0 0 30px rgba(236, 72, 153, 0.6), 3px 3px 6px rgba(0,0,0,0.7);
-            }
-            50% {
-                text-shadow: 0 0 25px rgba(147, 51, 234, 1), 0 0 45px rgba(236, 72, 153, 0.9), 0 0 60px rgba(147, 51, 234, 0.4), 3px 3px 6px rgba(0,0,0,0.7);
             }
         }
 
